--- a/src/styles.css
+++ b/src/styles.css
@@ -15,8 +15,17 @@ body {
     grid-template-rows: minmax(7rem, auto) repeat(5, 6rem);
 }
 
-.spanTwoButton {
-    grid-column: span 2;
+.calculator-grid > button {
+    cursor: pointer;
+    font-size: 2rem;
+    border: 1px solid white;
+    outline: none;
+    background-color: rgba(255, 255, 255, .75);
+}
+
+.calculator-grid > button:hover,
+.calculator-grid > button:focus {
+    background-color: rgba(255, 255, 255, 0.9);
 }
 
 .output {
@@ -26,14 +35,21 @@ body {
     align-items: flex-end;
     justify-content: space-around;
     flex-direction: column;
+    padding: .75rem;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 .output .previous-operand {
-    color: rgba(255, 255, 255, 0.75);
+    color: rgba(255, 255, 255, 0.85);
     font-size: 1.5rem;
 }
 
 .output .current-operand {
-    color: rgba(255, 255, 255, 0.75);
+    color: rgba(255, 255, 255, 0.85);
     font-size: 2.5rem;
+}
+
+.spanTwoButton {
+    grid-column: span 2;
 }
